--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/style.css" >
 </head>
 <body>
-    
+    <div id="viewport">
+
+    </div>
+    <script src="src/controller.js"></script>
+    <script>
+        const controller = new Controller();
+    </script>
 </body>
 </html>
